# etsimec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.MIT  README.md
EtsiMec/: CMakeLists.txt  appcharcs.cpp  appcharcs.h  appcontext.cpp  appcontext.h  appcontextmanager.cpp  appcontextmanager.h  appinfo.cpp  appinfo.h  applicationlist.cpp  applicationlist.h  applistclient.cpp  applistclient.h  edgecontrolleretsi.cpp  edgecontrolleretsi.h  etsiedgeclient.cpp  etsiedgeclient.h  etsimecoptions.cpp  etsimecoptions.h  etsimecserver.h  grpcueapplcmproxy.cpp  grpcueapplcmproxy.h  grpcueapplcmproxyclient.cpp  grpcueapplcmproxyclient.h  notificationevent.cpp  notificationevent.h  staticfileueapplcmproxy.cpp  staticfileueapplcmproxy.h  staticueapplcmproxy.cpp  staticueapplcmproxy.h  trivialueapplcmproxy.h  ueapplcmproxy.cpp  ueapplcmproxy.h  ueapplcmproxy.proto  utils.cpp  utils.h
Executables/: CMakeLists.txt  etsimeccli.cpp  ueapplcmproxyclientmain.cpp  ueapplcmproxymain.cpp
OpenWhisk/: CMakeLists.txt  action.cpp  action.h  command.cpp  command.h  invoker.cpp  invoker.h  lister.cpp  lister.h
Test/: CMakeLists.txt  testetsimec.cpp  testgrpcueapplcmproxy.cpp  testinvoker.cpp  testlister.cpp  testmain.cpp  teststaticueapplcmproxy.cpp  trivialstaticueapplcmproxy.h  wskutils.h
doc/: reference_architecture.drawio  ueapplcmproxy.drawio
jenkins/: cppcheck.sh  cppcheck.suppression
utils/: build_deps.sh
